--- a/Projeto02_Unidade01/gerenciador_de_processos/mainwindow.ui
+++ b/Projeto02_Unidade01/gerenciador_de_processos/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>922</width>
-    <height>552</height>
+    <width>940</width>
+    <height>744</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,84 +27,12 @@
      <string>PID: </string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="txt_PID">
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>10</y>
-      <width>461</width>
-      <height>25</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btn_matar">
-    <property name="geometry">
-     <rect>
-      <x>520</x>
-      <y>10</y>
-      <width>80</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Matar</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btn_suspender">
-    <property name="geometry">
-     <rect>
-      <x>610</x>
-      <y>10</y>
-      <width>89</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Suspender</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btn_continuar">
-    <property name="geometry">
-     <rect>
-      <x>710</x>
-      <y>10</y>
-      <width>89</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Continuar</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>40</y>
-      <width>41</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Filtro:  </string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="txt_PID_2">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>40</y>
-      <width>451</width>
-      <height>25</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QRadioButton" name="rb_root">
     <property name="geometry">
      <rect>
-      <x>810</x>
-      <y>10</y>
-      <width>112</width>
+      <x>860</x>
+      <y>0</y>
+      <width>61</width>
       <height>23</height>
      </rect>
     </property>
@@ -112,47 +40,11 @@
      <string>Root</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_5">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>80</y>
-      <width>111</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QTableView" name="tableView">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>371</y>
-      <width>891</width>
-      <height>111</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="saida">
-    <property name="geometry">
-     <rect>
-      <x>370</x>
-      <y>130</y>
-      <width>67</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
    <widget class="QSplitter" name="splitter">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>40</y>
+      <x>10</x>
+      <y>50</y>
       <width>199</width>
       <height>25</height>
      </rect>
@@ -201,8 +93,8 @@
    <widget class="QSplitter" name="splitter_2">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>40</y>
+      <x>260</x>
+      <y>50</y>
       <width>183</width>
       <height>26</height>
      </rect>
@@ -229,13 +121,139 @@
      </property>
     </widget>
    </widget>
+   <widget class="QTableWidget" name="tabela_processos">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>90</y>
+      <width>901</width>
+      <height>591</height>
+     </rect>
+    </property>
+    <column>
+     <property name="text">
+      <string>User</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>PID</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Status</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Prioridade</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Nice</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>CPU alocada</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Uso da CPU (%)</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Memória (%)</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Comando</string>
+     </property>
+    </column>
+   </widget>
+   <widget class="QSplitter" name="splitter_5">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>10</y>
+      <width>222</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+    <widget class="QLineEdit" name="txt_PID"/>
+    <widget class="QPushButton" name="btn_matar">
+     <property name="text">
+      <string>Matar</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QSplitter" name="splitter_6">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>10</y>
+      <width>161</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+    <widget class="QPushButton" name="btn_suspender">
+     <property name="text">
+      <string>Suspender</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btn_continuar">
+     <property name="text">
+      <string>Continuar</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QSplitter" name="splitter_7">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>30</y>
+      <width>270</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Filtro:  </string>
+     </property>
+    </widget>
+    <widget class="QSplitter" name="splitter_4">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <widget class="QLineEdit" name="txt_filtro"/>
+     <widget class="QPushButton" name="btn_filtrar">
+      <property name="text">
+       <string>Filtar</string>
+      </property>
+     </widget>
+    </widget>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>922</width>
+     <width>940</width>
      <height>22</height>
     </rect>
    </property>
